# FYP-Stream-Cipher

./: .gitignore  CMakeLists.txt  attack_main.c  attack_main.h  by_hand.txt  cipher_helpers.c  cipher_helpers.h  cipher_unit_tests.c  cube_attack.c  cube_attack.h  cube_attack_unit_tests.c  dummy_cipher.c  dummy_cipher.h  efficient_grain.c  efficient_grain.h  encoding.c  encoding.h  grain.c  grain.h  grain.py  lfsr.c  lfsr.h  main.c  minunit.c  minunit.h  mobius_cube_attack.c  mobius_cube_attack.h  mobius_unit_tests.c  power_2_constants.h  unit_tests.c  useful.c  useful.h
Report/: 2d_cube_eg.pdf_tex  Thumbs.db  bib.bib  dummy_cipher.pdf_tex  report.tex  results charts.ods
scripts/: generate_2_powers.py  grain.py
source/: CMakeLists.txt  analysis.c  attack_main.c  attack_main.h  main.c  meta_attack.c
source/cipher_io/: CMakeLists.txt  encoding.c  encoding.h  useful.c  useful.h
source/ciphers/: CMakeLists.txt  cipher_helpers.c  cipher_helpers.h  dummy_cipher.c  dummy_cipher.h  efficient_grain.c  efficient_grain.h  grain.c  grain.h
source/cube_attack/: CMakeLists.txt  cube_attack.c  cube_attack.h  mobius_cube_attack.c  mobius_cube_attack.h  random_picker.c
source/tests/: CMakeLists.txt  cipher_unit_tests.c  cipher_unit_tests.h  cube_attack_unit_tests.c  cube_attack_unit_tests.h  minunit.c  minunit.h  mobius_unit_tests.c  mobius_unit_tests.h  run_all_tests.c
