cmake_minimum_required(VERSION 2.8.4)
project(FYP_Stream_Cipher)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -std=c99")
set(PRODUCTION_SOURCE_FILES main.c grain.c useful.c efficient_grain.c encoding.c)
set(UNIT_TEST_SOURCE_FILES unit_tests.c grain.c useful.c efficient_grain.c)
add_executable(FYP_Stream_Cipher ${PRODUCTION_SOURCE_FILES})
add_executable(FYP_Stream_Cipher_Unit_Test ${UNIT_TEST_SOURCE_FILES})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "C:/Users/User/Documents/GitHub/FYP-Stream-Cipher")