cmake_minimum_required(VERSION 2.8.4)
project(FYP_Stream_Cipher)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -std=c11")
set(PRODUCTION_SOURCE_FILES main.c grain.c useful.c efficient_grain.c encoding.c cipher_helpers.c)
set(CUBE_ATTACK_SOURCE_FILES attack_main.c useful.c cube_attack.c grain.c cipher_helpers.c)
set(UNIT_TEST_CUBE_ATTACK_SOURCE_FILES cube_attack_unit_tests.c cube_attack.c useful.c grain.c cipher_helpers.c)
set(UNIT_TEST_SOURCE_FILES cipher_unit_tests.c grain.c useful.c efficient_grain.c cipher_helpers.c)
add_executable(FYP_Stream_Cipher ${PRODUCTION_SOURCE_FILES})
add_executable(FYP_Stream_Cipher_Unit_Test ${UNIT_TEST_SOURCE_FILES})
add_executable(FYP_Stream_Cipher_Cube_Attack ${CUBE_ATTACK_SOURCE_FILES})
add_executable(FYP_Stream_Cipher_Cube_Attack_Unit_Test ${UNIT_TEST_CUBE_ATTACK_SOURCE_FILES})